2003-05-09  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/config.h: New file.

2003-05-09  Christopher Faylor  <cgf@redhat.com>

	* cygthread.cc (cygthread::detach): Prioritize waiting for I/O
	completion over waiting for signal delivery.

2003-05-06  Thomas Pfaff  <tpfaff@gmx.net>

	* signal.cc (nanosleep): Do not wait twice for signal arrival.

2003-05-03  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/types.h: Fix erroneous definition of ino_t from
	2003-04-28.

2003-05-03  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (chown_worker): Allow chown'ing of socket files.

2003-04-30  Thomas Pfaff  <tpfaff@gmx.net>

	* Makefile.in: Revert patch from 2003-04-17.

2003-04-28  Brian Ford  <ford@vss.fsi.com>

	* profil.h (PROFADDR): Prevent overflow when text segments are larger
	than 256k.
	* profil.c (profthr_func): Raise thread priority for more accurate
	sampling.

2003-04-26  Christopher Faylor  <cgf@redhat.com>

	* path.cc (hash_path_name): Use ino_t as type.

2003-04-26  Christopher Faylor  <cgf@redhat.com>

	* errno.cc (_sys_nerr): Fix compile error erroneously checked in on
	2003-04-23.

2003-04-25  Corinna Vinschen  <corinna@vinschen.de>

	* include/netinet/ip.h: Include netinet/in_systm.h and netinet/in.h
	to allow standalone usage (autoconf).

2003-04-23  Christopher Faylor  <cgf@redhat.com>

	* fork.cc: Change SLOW_PID_REUSE to NO_SLOW_PID_REUSE and invert ifdef
	sense throughout.

2003-04-22  Christopher Faylor  <cgf@redhat.com>

	* select.cc (fhandler_pipe::ready_for_read): Assure that get_guard is
	called for successful non-blocking pipe reads.

2003-04-22  Corinna Vinschen  <corinna@vinschen.de>

	* include/inttypes.h: New file.
	* include/stdint.h: New file.
	* include/cygwin/in.h: Include stdint.h instead of sys/types.h.
	* include/cygwin/types.h: Include stdint.h.  Remove typedefs for
	intN_t and uintN_t since these are defined in stdint.h now.

2003-04-21  Christopher Faylor  <cgf@redhat.com>
